# internal/delivery/http/request/admin_request/validate_store.go
@@ -3,3 +3,7 @@ package admin_request
 type RejectStoreRequest struct {
 	Reason string `json:"reason" validate:"required"`
 } //	@name	RejectStoreRequest
+
+type ClarificationStoreRequest struct {
+	Reason string `json:"reason" validate:"required"`
+} //	@name	ClarificationStoreRequest
